--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,17 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css"
-      integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
+    <meta name="author" content="Skyice">
+    <meta name="description" content="S-D STUDIO官網">
+    <meta name="keywords" content="S-D STUDIO,Film,Colorist,Photography,Advertisement,Art Design,Animation">
+    <meta property="og:title" content="S-D STUDIO">
+    <meta property="og:description" content="S-D STUDIO官網">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://s-dstudio.github.io/S-DSTUDIO/">
+    <meta property="og:image" content="https://i.postimg.cc/hvQQY1dt/S-D-LOGO.jpg">
+    <link rel="shortcut icon" href="https://i.postimg.cc/7LfpKpZQ/blanco-coffee.png" type="image/png" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css"
+      integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
     <link rel="icon" href="<%= BASE_URL %>logo_icon.png">
     <!-- <title><%= htmlWebpackPlugin.options.title %></title> -->
     <title>S-D STUDIO</title>
