修改 FB縮圖顯示尺寸

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     <meta property="og:description" content="S-D STUDIO官網">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://s-dstudio.github.io/S-DSTUDIO/">
-    <meta property="og:image" content="https://i.postimg.cc/hvQQY1dt/S-D-LOGO.jpg">
+    <meta property="og:image" content="https://i.postimg.cc/t42nJby6/logo.jpg">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css"
       integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
     <link rel="icon" href="<%= BASE_URL %>logo_icon.png">
