新增google追蹤代碼到head

--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,15 @@
       integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
     <link rel="icon" href="<%= BASE_URL %>logo_icon.png">
     <title>S-D STUDIO</title>
+    <!-- Google tag (gtag.js) 安裝google追蹤代碼 -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-5RPYT0GK33"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() { dataLayer.push(arguments); }
+      gtag('js', new Date());
+
+      gtag('config', 'G-5RPYT0GK33');
+    </script>
   </head>
   <body>
     <noscript>
